--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ img, picture, video, canvas, svg {
 }
 
 img{
-    width: 3rem;
+    width: 4rem;
 }
 
 .wrapper {
@@ -57,9 +57,7 @@ img{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
-    position: relative;
-    width: 90%;
+    min-height: 90vh;
     color: var(--white);
 }
 
@@ -67,15 +65,20 @@ img{
     text-align: center;
     background-color: var(--grey-800);
     border-radius: .8rem;
-    padding: .8rem;
+    padding: 2rem;
     display: grid;
     place-items: center;
+    width: 90%;
+    max-width: min(900px, 90%);
 }
 
+
+
 .card {
-    max-width: 600px;
     display: grid;
     place-items: center;
+    width: 100%; /* Ocupa el 100% del ancho disponible del contenedor */
+    max-width: min(800px, 100%); /* Ancho máximo de 600px o el 100% del contenedor, lo que sea menor */
 }
 
 .text {
@@ -107,7 +110,7 @@ p {
 
 .description {
     color: rgba(252, 250, 250, 0.7);
-    font-size: .5rem;
+    font-size: .7rem;
     font-weight: var(--f-light);
     text-align: center;
 }
@@ -115,22 +118,22 @@ p {
 .social-links {
     display: flex;
     flex-direction: column;
-    gap: 10px;
-    margin: .8rem 0;
+    gap: .8rem;
+    margin-top: .8rem;
     width: 100%;
 }
 
 li {
     width: 100%;
     background-color: var(--grey-700);
-    font-size: .5rem;
+    font-size: .7rem;
     transition: background-color 0.3s ease;
     border-radius: .3rem;
 }
 
 .social-links a {
     display: block;
-    padding: .4rem;
+    padding: .6rem;
     text-align: center;
     font-weight: var(--f-medium);
     color: var(--white);
@@ -153,4 +156,16 @@ li {
 
 .attribution a {
     color: hsl(228, 45%, 44%);
+}
+
+@media (min-width: 768px) {
+    .card {
+        max-width: 900px; /* Ajusta el ancho máximo para pantallas más grandes */
+    }
+}
+
+@media (min-width: 1200px) {
+    .card {
+        max-width: 1200px; /* Ajusta el ancho máximo para pantallas muy grandes */
+    }
 }
