--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ img, picture, video, canvas, svg {
 }
 
 img{
-    width: 4rem;
+    width: 6rem;
 }
 
 .wrapper {
@@ -68,8 +68,8 @@ img{
     padding: 2rem;
     display: grid;
     place-items: center;
-    width: 90%;
-    max-width: min(900px, 90%);
+    width: 100%;
+    max-width: 400px;
 }
 
 
@@ -94,23 +94,23 @@ img{
 h1 {
     margin-top: 1.2rem;
     margin-bottom: 0;
-    font-size: 1rem;
+    font-size: 1.2rem;
 }
 
 p {
-    font-size: .87rem;
+    font-size: .9rem;
 }
 
 .city {
     color: var(--green);
     margin-top: .5rem;
     font-weight: var(--f-medium);
-    font-size: .6rem;
+    font-size: .8rem;
 }
 
 .description {
     color: rgba(252, 250, 250, 0.7);
-    font-size: .7rem;
+    font-size: .8rem;
     font-weight: var(--f-light);
     text-align: center;
 }
@@ -119,7 +119,7 @@ p {
     display: flex;
     flex-direction: column;
     gap: .8rem;
-    margin-top: .8rem;
+    margin-top: 1rem;
     width: 100%;
 }
 
@@ -129,11 +129,12 @@ li {
     font-size: .7rem;
     transition: background-color 0.3s ease;
     border-radius: .3rem;
+    padding: .3rem;
 }
 
 .social-links a {
     display: block;
-    padding: .6rem;
+    padding: .8rem;
     text-align: center;
     font-weight: var(--f-medium);
     color: var(--white);
